# resrv

./: .gitignore  Cargo.toml  README.md  bacon.toml  justfile
assets/: index.html  test.html
assets/css/: style.css
src/: asset_tracker.rs  config.rs  injected.html  lib.rs  serve_dir_reload.rs
