[package]
name = "resrv"
version = "0.1.0"
authors = ["Mislav Markovic <markovic.mislav@proton.me>"]
description = """
resrv serves assets from file directory and live-reloads them in browser on change.
"""
license = "MIT"
edition = "2021"
rust-version = "1.82"

[[bin]]
bench = false
path = "src/bin/server/main.rs"
name = "resrv"

[dependencies]
axum = { version = "0.8.0-alpha.1", features = ["macros", "ws"] }
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
futures = "0.3.31"
http = "1.1.0"
notify = "7.0.0"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "trace", "util"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
